trying to fix overlap whitepace

--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,6 @@ section {
   grid-row: 1;
   padding-top: 5rem;
   padding-bottom: 5rem;
-  position: relative;left: 3rem;
   width: 100vw;
 }
 
